[gd_scene load_steps=3 format=3 uid="uid://d3vptq6og431i"]

[ext_resource type="FontFile" uid="uid://dbbd685dur5vv" path="res://assets/fonts/EquipmentPro.ttf" id="1_etutl"]
[ext_resource type="Script" path="res://main/programming_minigame.gd" id="1_vtmyx"]

[node name="ProgrammingMiniGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vtmyx")

[node name="BackgroundMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="BackgroundRect" type="ColorRect" parent="BackgroundMarginContainer"]
layout_mode = 2
color = Color(0.486275, 0.109804, 0.164706, 0.952941)

[node name="MiniGameMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="OutterHBoxContainer" type="HBoxContainer" parent="MiniGameMarginContainer"]
layout_mode = 2

[node name="LeftVBoxContainer" type="VBoxContainer" parent="MiniGameMarginContainer/OutterHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.3

[node name="PreviewVBoxContainer" type="VBoxContainer" parent="MiniGameMarginContainer/OutterHBoxContainer/LeftVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.8

[node name="PreviewTitle" type="RichTextLabel" parent="MiniGameMarginContainer/OutterHBoxContainer/LeftVBoxContainer/PreviewVBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_etutl")
theme_override_font_sizes/normal_font_size = 20
text = "Preview"
fit_content = true

[node name="ItemList" type="ItemList" parent="MiniGameMarginContainer/OutterHBoxContainer/LeftVBoxContainer/PreviewVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResourcesHBoxContainer" type="VBoxContainer" parent="MiniGameMarginContainer/OutterHBoxContainer/LeftVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResourcesTitle" type="RichTextLabel" parent="MiniGameMarginContainer/OutterHBoxContainer/LeftVBoxContainer/ResourcesHBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_etutl")
theme_override_font_sizes/normal_font_size = 20
text = "Resources"
fit_content = true

[node name="ItemList" type="ItemList" parent="MiniGameMarginContainer/OutterHBoxContainer/LeftVBoxContainer/ResourcesHBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MiddleVBoxContainer" type="VBoxContainer" parent="MiniGameMarginContainer/OutterHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviewTitle" type="RichTextLabel" parent="MiniGameMarginContainer/OutterHBoxContainer/MiddleVBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_etutl")
theme_override_font_sizes/normal_font_size = 20
text = "Instructions"
fit_content = true

[node name="ItemList" type="ItemList" parent="MiniGameMarginContainer/OutterHBoxContainer/MiddleVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightVBoxContainer" type="VBoxContainer" parent="MiniGameMarginContainer/OutterHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviewTitle" type="RichTextLabel" parent="MiniGameMarginContainer/OutterHBoxContainer/RightVBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_etutl")
theme_override_font_sizes/normal_font_size = 20
text = "Shortcuts"
fit_content = true

[node name="ItemList" type="ItemList" parent="MiniGameMarginContainer/OutterHBoxContainer/RightVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
